<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#242A37"
    android:clickable="false"
    android:fitsSystemWindows="true"



    android:layout_height="match_parent"
    tools:context=".views.Login_activity">
    <TextView

        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_bck"
        android:textColor="#F7F6F6"
        android:textSize="30sp"
        android:layout_marginTop="90dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/log_your_accont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="@string/logss_your_acco"
        android:layout_marginTop="13dp"
        android:textSize="17sp"
        android:textColor="#F7F6F6"
        app:layout_constraintTop_toBottomOf="@id/welcome_txt"
        app:layout_constraintStart_toStartOf="@id/welcome_txt"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/ic_rec"
        android:layout_marginTop="32dp"
        android:inputType="textEmailAddress"
        android:textColorHint="#FFFFFF"
        android:hint="@string/email"
        android:paddingEnd="20dp"

        android:textAlignment="textStart"
        android:paddingStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/log_your_accont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/pass"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:background="@drawable/ic_rec"
        android:layout_marginTop="32dp"
        android:paddingEnd="20dp"
        android:inputType="textPassword"
        android:hint="@string/passss"
        android:textColorHint="#FFFFFF"

        android:paddingStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintEnd_toEndOf="@id/email"/>
    <Button
        android:id="@+id/log_in"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:background="@drawable/button_coulor"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@id/pass"
        app:layout_constraintStart_toStartOf="@id/pass"
        app:layout_constraintEnd_toEndOf="@id/pass"
        android:text="@string/logs_in"
        android:textColor="#FFFFFF"
        />
    <TextView
        android:id="@+id/forget_passsss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pass"
        app:layout_constraintTop_toBottomOf="@id/log_in"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="25dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/log_in"
        app:layout_constraintEnd_toEndOf="@id/log_in"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/return_to_welcome"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ic_close"
        android:layoutDirection="ltr"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_txt"
        android:layout_marginStart="22dp"/>
    <TableRow
        android:layout_height="7dp"
        android:layout_width="135dp"
        android:background="#000000"
        android:layout_marginBottom="7dp"

        app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="@id/forget_passsss"
        app:layout_constraintEnd_toEndOf="@id/forget_passsss"
        />
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="@id/pass"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/pass"
        app:layout_constraintTop_toBottomOf="@id/log_in"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
