<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#242A37"
    tools:context=".views.Forget_pass_activity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView

            android:id="@+id/welcome_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pass_with_email"
            android:textColor="#F7F6F6"
            android:textSize="34sp"
            android:layout_marginTop="140dp"

            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/via_to_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#FAFAFA"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/welcome_txt"
            app:layout_constraintStart_toStartOf="@id/welcome_txt"

            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/enter_via_email"/>
        <EditText
            android:id="@+id/forget_pass_with_email"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:background="@drawable/ic_rec"
            android:layout_marginTop="32dp"

            android:paddingEnd="15dp"
            android:inputType="textPassword"
            android:hint="@string/old_passwrd"
            android:textColorHint="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/via_to_email"

            android:textAlignment="textStart"
            android:paddingStart="25dp"

            app:layout_constraintStart_toStartOf="@id/welcome_txt"
            app:layout_constraintEnd_toEndOf="@id/via_to_email"/>
        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:background="@drawable/ic_rec"
            android:layout_marginTop="32dp"
            android:paddingEnd="15dp"
            android:inputType="textPassword"
            android:hint="@string/new_pas"
            android:textColorHint="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/forget_pass_with_email"

            android:textAlignment="textStart"
            android:paddingStart="25dp"


            app:layout_constraintStart_toStartOf="@id/welcome_txt"
            app:layout_constraintEnd_toEndOf="@id/via_to_email"/>
        <EditText
            android:id="@+id/con1ss"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:background="@drawable/ic_rec"
            android:paddingEnd="15dp"
            android:layout_marginTop="32dp"

            android:inputType="textPassword"
            android:hint="@string/confrm_password"
            android:textColorHint="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/confirm_pass"

            android:textAlignment="textStart"
            android:paddingStart="25dp"

            app:layout_constraintStart_toStartOf="@id/welcome_txt"
            app:layout_constraintEnd_toEndOf="@id/via_to_email"/>
        <Button
            android:id="@+id/send"
            android:layout_width="0dp"
            android:layout_height="44dp"

            android:background="@drawable/button_coulor"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/con1ss"
            android:text="@string/snd"
            app:layout_constraintStart_toStartOf="@id/forget_pass_with_email"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@id/forget_pass_with_email"/>

        <TextView
            android:id="@+id/close_of_interface"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:background="@drawable/ic_close_copy"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="25dp"
            android:layoutDirection="ltr"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/welcome_txt"
            android:textAlignment="center"/>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-8351929453534437/4967121882"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />






    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>