<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242A37"
    tools:context=".views.choise_facebook">
    <TextView
        android:id="@+id/arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="40dp"
        android:layoutDirection="ltr"
        android:background="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/en_language"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ic_rec"
        android:text="@string/register_facebook"
        android:textColor="#FFFFFF"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welll" />

    <Button
        android:id="@+id/ar_language"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_rec"
        android:text="@string/login_facebook"


        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/en_language"
        app:layout_constraintStart_toStartOf="@+id/en_language"
        app:layout_constraintTop_toBottomOf="@+id/en_language" />

    <TextView
        android:id="@+id/welll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/register_with_facebook"
        android:textColor="#FFFFFF"

        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>