<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242A37"
    tools:context=".views.Login_facebook">
    <TextView

        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_with_facebook"

        android:textColor="#F7F6F6"
        android:textSize="30sp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/return_to_welcome"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ic_close"
        android:layoutDirection="ltr"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_txt"
        android:layout_marginStart="22dp"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ic_rec"


        android:hint="@string/nikenane"
        android:inputType="textPassword"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_txt"

        android:textColorHint="#FFFFFF"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       />
    <Button
        android:id="@+id/log_in"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:background="@drawable/button_coulor"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@id/pass"
        app:layout_constraintStart_toStartOf="@id/pass"
        app:layout_constraintEnd_toEndOf="@id/pass"
        android:text="@string/logs_in"
        android:textColor="#FFFFFF"
        />


</androidx.constraintlayout.widget.ConstraintLayout>