<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242A37"
    android:orientation="vertical"
    android:padding="16dp"



    tools:context=".views.nobsa_actevity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="top"
        android:text="@string/personal_profile"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textSize="30dp"


        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:gravity="center_vertical"
        android:text="@string/subject"
      app:layout_constraintTop_toTopOf="parent"


        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintBottom_toTopOf="@id/button_send"


        />

    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintBottom_toTopOf="@id/button_send"


        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        android:layout_marginEnd="20dp"


        app:layout_constraintTop_toBottomOf="@id/textView2"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_coulor"

       app:layout_constraintBottom_toTopOf="@id/adView"

        app:layout_constraintTop_toBottomOf="@id/edit_text_message"
        android:text="@string/add" />
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-8351929453534437/4967121882"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>